syntax = "proto3";

package user;

option go_package = "/pb";

service UserService {
  rpc ListUsers (Empty) returns (UserListResponse);
  rpc GetUser (UserIdRequest) returns (UserResponse);
  rpc CreateUser (UserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (Empty);
  rpc DeleteUser (UserIdRequest) returns (Empty);
  rpc SearchUser (SearchUserRequest) returns (UserListResponse);
}

message Empty {}

message UserIdRequest {
  string id = 1;
}

message UserRequest {
  string name = 1;
  string email = 2;
}

message UpdateUserRequest {
  string id = 1;
  UserRequest user = 2;
}

message SearchUserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UserListResponse {
  repeated UserResponse users = 1;
}
